# Code-reader

./: .dockerignore  .env.example  .gitignore  Dockerfile  FILE_FILTERING_IMPLEMENTATION_SUMMARY.md  README.md  design.md  docker-compose.yml  main.py  puppeteer-config.json  pyproject.toml  requirements.txt  start_backend.py
backend/: README.md  alembic.ini  config.py  database.py  main.py  models.py  requirements.txt  routers.py  run.py  services.py
docker/: README.md  build.sh  nginx-main.conf  nginx.conf  run.sh  supervisord.conf
example/: openai_example.py  rag_example.py  res.md  spider_example.py
frontend/: Dockerfile  MARKED_MARKDOWN_UPGRADE.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  test-env.js  vite.config.ts
k8s/: 00-namespace.yaml  01-frontend.yaml  02-backend.yaml  03-config.yaml  04-pvc.yaml  05-rbac.yaml  README.md  deployment.yaml  test-deployment.yaml
sql/: 01_create_database.sql  02_create_tables.sql  03_update_repositories_table.sql  1_create_database.sql  2_create_tables.sql  README.md  updgrade.sql
src/: __init__.py
static/: test_display.html
templates/: analysis_config.html  analysis_detail.html  base.html  index.html  results.html
test/: test_env_github_token.py  test_env_openai_llm.py  test_env_rag.py  test_env_sql.py  test_flow_analysis.py  test_flow_local.py  test_flow_webanalysis.py  test_node_CodeParsingBatchNode.py  test_node_GitCloneNode.py  test_node_GitHubInfoFetchNode.py  test_node_LocalFolderNode.py  test_node_ReadmeAnalysisNode.py  test_node_VectorizeRepoNode.py  test_node_rag_index.py  (+2 more)
(+113 files in other folders)
