[project]
name = "code-reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "chromadb>=1.1.0",
    "cryptography>=41.0.0",
    "fastapi>=0.116.2",
    "gitpython>=3.1.45",
    "jinja2>=3.1.6",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.33",
    "pocketflow>=0.0.3",
    "pymysql>=1.1.2",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.35.0",
]


[tool.uv]
# index-url = "http://mirrors.cloud.aliyuncs.com/pypi/simple/"
# index-url = "https://mirrors.aliyuncs.com/pypi/simple/"
# index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web"
index-url = "https://mirrors.bfsu.edu.cn/pypi/web/simple"